// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > renders correctly 1`] = `
<jest>
  <span
    class="ecl-label ecl-label--low"
  >
    Label
  </span>
</jest>
`;

exports[`Label > renders correctly with extra attributes 1`] = `
<jest>
  <span
    class="ecl-label ecl-label--low"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    Label
  </span>
</jest>
`;

exports[`Label > renders correctly with extra class names 1`] = `
<jest>
  <span
    class="ecl-label ecl-label--low custom-class custom-class--test"
  >
    Label
  </span>
</jest>
`;
